--- a/Ex2/user/Makefile
+++ b/Ex2/user/Makefile
@@ -1,4 +1,4 @@
 all: usermode_interface.c
-	gcc -O3 -Wall -std=c11 -o user.out usermode_interface.c
+	gcc -O3 -Wall -std=c11 -o usermode_interface.o usermode_interface.c
 clean:
 	$(RM) user.out
