Added documentation and changed module names

--- a/Ex3/user/Makefile
+++ b/Ex3/user/Makefile
@@ -1,4 +1,4 @@
-OBJECTS = user.c rule.c log.c
+OBJECTS = UserInterface.c UserLogManager.c UserRuleManager.c
 
 all: $(OBJECTS)
 	gcc -O3 -Wall -std=c11 -o main $(OBJECTS)
