--- a/Ex3/module/Makefile
+++ b/Ex3/module/Makefile
@@ -1,5 +1,5 @@
 obj-m := firewall.o
-firewall-objs := FWRuleDevice.o hw3secws.o FWLogDevice.o PakcetHandler.o
+firewall-objs := FWRuleDevice.o hw3secws.o FWLogDevice.o PacketHandler.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
